# esp001-ws-audio

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults  test_usb_cmd.py  test_ws_server.py  ws_audio_client.py  ws_send_audio.py  ws_test_server.py
components/audio_codec/: CMakeLists.txt  audio_codec.c
components/audio_codec/include/: audio_codec.h
components/audio_driver/: CMakeLists.txt  audio_driver.c  es7210.c  es8311.c
components/audio_driver/include/: audio_driver.h  es7210.h  es8311.h
components/opus_codec/: CMakeLists.txt  opus_codec.c  opus_codec.h
components/tca9555/: CMakeLists.txt  tca9555.c  tca9555.h
components/usb_cmd/: CMakeLists.txt  usb_cmd.c
components/usb_cmd/include/: usb_cmd.h
components/ws_client/: CMakeLists.txt  ws_client.c
components/ws_client/include/: ws_client.h
main/: CMakeLists.txt  main.c
